[gd_scene load_steps=31 format=3 uid="uid://dd77l4p1ekae0"]

[ext_resource type="Script" uid="uid://bbp23s3x0it26" path="res://scriptek/Farmland.gd" id="1_isai0"]
[ext_resource type="Texture2D" uid="uid://dnkqbn7b0yhtm" path="res://Assets/visual/UI/UiCozyFree.png" id="2_eh5rt"]
[ext_resource type="Texture2D" uid="uid://c31qrwhav34vk" path="res://Assets/visual/Objects/plants free.png" id="3_u2daa"]
[ext_resource type="Texture2D" uid="uid://ywhb2n71jtr5" path="res://Assets/visual/UI/Checkmark.png" id="4_jfxha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vh6am"]
size = Vector2(36, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpbtv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vu0jr"]
atlas = ExtResource("2_eh5rt")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri50m"]
atlas = ExtResource("2_eh5rt")
region = Rect2(160, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fq224"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu0jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri50m")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jfxha"]
atlas = ExtResource("3_u2daa")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_okwds"]
atlas = ExtResource("3_u2daa")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqej5"]
atlas = ExtResource("3_u2daa")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhiid"]
atlas = ExtResource("3_u2daa")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c03fg"]
atlas = ExtResource("3_u2daa")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s68st"]
atlas = ExtResource("3_u2daa")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8itxf"]
atlas = ExtResource("3_u2daa")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mweia"]
atlas = ExtResource("3_u2daa")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vowgm"]
atlas = ExtResource("3_u2daa")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8jwc"]
atlas = ExtResource("3_u2daa")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7v1l"]
atlas = ExtResource("3_u2daa")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac8oi"]
atlas = ExtResource("3_u2daa")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0bvc"]
atlas = ExtResource("3_u2daa")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fggk7"]
atlas = ExtResource("3_u2daa")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2c36"]
atlas = ExtResource("3_u2daa")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fciyt"]
atlas = ExtResource("3_u2daa")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_om6hl"]
atlas = ExtResource("3_u2daa")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i38li"]
atlas = ExtResource("3_u2daa")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfd50"]
atlas = ExtResource("3_u2daa")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnyqd"]
atlas = ExtResource("3_u2daa")
region = Rect2(64, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wr3tx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfxha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okwds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqej5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhiid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c03fg")
}],
"loop": true,
"name": &"carrot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s68st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8itxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mweia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vowgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8jwc")
}],
"loop": true,
"name": &"potato",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7v1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac8oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0bvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fggk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2c36")
}],
"loop": false,
"name": &"pumpkin",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fciyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om6hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i38li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfd50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnyqd")
}],
"loop": true,
"name": &"tomato",
"speed": 5.0
}]

[node name="Farmland" type="Marker2D"]
position = Vector2(200, 150)
script = ExtResource("1_isai0")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-200, -150)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(200, 150)
shape = SubResource("RectangleShape2D_vh6am")
debug_color = Color(0.973995, 0.12719, 0.255596, 0.42)

[node name="Area2D" type="Area2D" parent="StaticBody2D"]
position = Vector2(200, 150)
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
shape = SubResource("RectangleShape2D_fpbtv")

[node name="selectionbox" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_fq224")
frame_progress = 0.0521632

[node name="Crop" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_wr3tx")
animation = &"tomato"

[node name="Finish" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -30)
texture = ExtResource("4_jfxha")

[connection signal="body_entered" from="StaticBody2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="StaticBody2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="Crop" to="." method="_on_crop_animation_finished"]
